# dtm-database

./: .gitignore  README.md  openapi.json  renovate.json
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: backend-checks.yml  backend-formatting.yml  frontend-checks.yml  rust-formatting.yml
dtm-database-backend/: .gitignore  Cargo.toml
dtm-database-backend/src/: env.rs  lib.rs  main.rs  openapi.rs
dtm-database-backend/src/routes/: version.rs
dtm-database-frontend/: .prettierrc.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
dtm-database-frontend/apps/main-app/: package.json
dtm-database-frontend/apps/main-app/app/: layout.tsx  page.tsx
dtm-database-frontend/apps/main-app/app/home/: page.tsx
dtm-database-frontend/apps/stories/: package.json  pnpm-lock.yaml  vite.config.ts  vite.config.ts.timestamp-1696038572168-b8859f3135893.mjs
dtm-database-frontend/apps/stories/src/stories/: title.stories.tsx
dtm-database-frontend/apps/storybook/: package.json
dtm-database-frontend/apps/web/: next.config.js  orval.config.ts  package.json
dtm-database-frontend/apps/web/app/: layout.tsx
dtm-database-frontend/apps/web/app/home/: page.tsx
dtm-database-frontend/apps/web/lib/: backend.ts
dtm-database-frontend/apps/web/lib/api/: backend.ts
dtm-database-frontend/devserver/backend-http/: package.json
