[package]
name = "dtm-database-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "=0.6.20"
once_cell = "=1.18.0"
tokio = { version = "=1.34.0", features = ["macros", "rt-multi-thread"] }
utoipa = "=4.1.0"
utoipa-swagger-ui = { version = "=4.0.0", features = ["axum"] }
